# ankirs

./: .env  .gitignore  .gitignore.swp  Cargo.toml  TODO.md  anki.db-shm
migrations/: 20230705000704_card.sql  20230705011242_card-created_at-updated_at.sql  20230705112835_card-require-front-and-back.sql  20230705113422_card-require-front-and-back.sql  20230705113621_card-require-front-and-back.sql  20230707155605_deck-table.sql  20230707164237_deck-table.sql  20230707170943_deck-table.sql  20230708114512_session.sql  20230708121131_card-tags.sql  20230708122424_answer.sql  20230723221616_answer.sql  20230729122825_self-assessment.sql
src/: app.rs  auth.rs  db.rs  lib.rs  main.rs  models.rs  queries.rs  services.rs
src/app/: menus.rs  mod.rs  state.rs
src/app/menus/: card.rs  deck.rs  mod.rs  traits.rs  utils.rs
