[package]
name = "ankirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
bcrypt = "0.15.0"
clap = { version = "4.3.10", features = ["derive"]}
colored = "2.0.4"
dotenv = "0.15.0"
log = "0.4.19"
sqlx = { version = "0.7.0", features = ["sqlite", "json", "time", "macros", "runtime-tokio"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version="1.29.1", features = ["full"] }
